# obdb-etl

./: .gitignore  .pre-commit-config.yaml  ADDRESS_NORM_PLAN.md  API_V2_SCHEMA.md  README.md  WORKFLOW.md  main.py  pyproject.toml  repomix-output.xml
.ci_profiles/: profiles.yml
.github/workflows/: ci.yml
dags/: brewery_pipeline_dag.py
dbt_project/brewery_models/: dbt_project.yml
dbt_project/brewery_models/models/: dim_breweries.sql  dim_breweries_combined.sql  dims.yml  map_brewery_ids.sql  sources.yml  stg.yml  stg_ba_breweries.sql  stg_breweries.sql
extract/: cli.py  config.py  duckdb_utils.py  io_utils.py  load_ba_json_data.py  load_json_data.py  load_obdb_csv_data.py  load_raw_data.py
tests/: __init__.py  test_extract_scripts.py  test_io_utils.py
