[project]
name = "obdb-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.0.6",
    "dbt-duckdb>=1.9.4",
    "duckdb>=1.3.2",
    "pandas>=2.3.2",
    "pytest>=9.0.2",
    "ruff==0.14.11",
    "mypy==1.10.0",
    "pre-commit==3.7.0",
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
exclude = ["\\.venv", "\\.pytest_cache", "data", "logs"]
